--- a/NFCReader/src/main/resources/application.properties
+++ b/NFCReader/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Accounts-NFCReader
-spring.datasource.username=
-spring.datasource.password=hallo
+# TIM
+spring.datasource.username=postgres
+spring.datasource.password=horse
+# BEN
+# spring.datasource.username=
+# spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
