tried nfcReader isValid func through getMapping

--- a/RoutesService/src/main/resources/application.properties
+++ b/RoutesService/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/RouteDistancesCosts
+spring.datasource.url=jdbc:postgresql://localhost:5432/Accounts-NFCReader
+# TIM
 spring.datasource.username=postgres
 spring.datasource.password=horse
+# BEN
+# spring.datasource.username=
+# spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
