--- a/StationBroker/pom.xml
+++ b/StationBroker/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+	    <dependency>  
+			<groupId>org.javatuples</groupId>  
+			<artifactId>javatuples</artifactId>  
+			<version>1.2</version>  
+		</dependency>   
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
