--- a/NFCReader/src/main/resources/application.properties
+++ b/NFCReader/src/main/resources/application.properties
@@ -1,53 +1,16 @@
-# OLD
-#spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB
-## TIM
-##spring.datasource.username=postgres
-##spring.datasource.password=horse
-## BEN
-#spring.datasource.username=
-#spring.datasource.password=hallo
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.format_sql=true
-#
-#server.error.include-message=always
-#logging.level.org.springframework.web=DEBUG
-
-
-
-spring.bankcard-datasource.url=jdbc:postgresql://localhost:5432/AccountsDB
-
-spring.events-datasource.url=jdbc:postgresql://localhost:5432/EventStore_NFCReader
-
+#OLD
+spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB
 # TIM
-
-#spring.bankcard-datasource.username=postgres
-#
-#spring.bankcard-datasource.password=horse
-#
-#spring.events-datasource.username=postgres
-#
-#spring.events-datasource.password=horse
-
-#BEN
-
-spring.bankcard-datasource.username=
-spring.bankcard-datasource.password=hallo
-
-spring.events-datasource.username=
-spring.events-datasource.password=hallo
+#spring.datasource.username=postgres
+#spring.datasource.password=horse
+# BEN
+spring.datasource.username=
+spring.datasource.password=hallo
 
 spring.jpa.hibernate.ddl-auto=create-drop
-
 spring.jpa.show-sql=true
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.properties.hibernate.format_sql=true
 
-
-
 server.error.include-message=always
-
 logging.level.org.springframework.web=DEBUG
