--- a/NFCReader/src/main/resources/application.properties
+++ b/NFCReader/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 logging.level.org.springframework.web=DEBUG
+
+eureka.client.serviceUrl.defaultZone=http://localhost:4000/eureka/
