--- a/StationBroker/src/main/resources/application.properties
+++ b/StationBroker/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ALSO NEEDS TO HAVE EVENTSTORE! DUNNO YET HOW TO HAVE MULTIPLE DBs
-spring.datasource.url=jdbc:postgresql://localhost:5432/Accounts-StationBroker
-spring.datasource.username=postgres
-spring.datasource.password=horse
+spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB
+spring.datasource.username=
+spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 logging.level.org.springframework.web=DEBUG
+
+server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:4000/eureka/
