NFC Reader can now communicate with Local server

--- a/StationBroker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/StationBroker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "eureka.client.serviceUrl.defaultZone",
       "type": "java.lang.String",
       "description": "Description for eureka.client.serviceUrl.defaultZone."
-  }
-] }
+    },
+    {
+      "name": "eureka.client.serviceUrl.defaultZone",
+      "type": "java.lang.String",
+      "description": "Description for eureka.client.serviceUrl.defaultZone."
+    }
+  ] }
