AccountService Broker interaction works!!

--- a/AccountService/src/main/resources/application.properties
+++ b/AccountService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ALSO NEEDS TO HAVE EVENTSTORE! DUNNO YET HOW TO HAVE MULTIPLE DBs
-spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB_Broker
+spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB_Service
 spring.datasource.username=
 spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
