routes service broken in routesRepo, query gives error

--- a/RoutesService/src/main/resources/application.properties
+++ b/RoutesService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Accounts-NFCReader
+spring.datasource.url=jdbc:postgresql://localhost:5432/Routes
 # TIM
 spring.datasource.username=postgres
 spring.datasource.password=horse
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 logging.level.org.springframework.web=DEBUG
+
+server.port=5000
+
+eureka.client.serviceUrl.defaultZone=http://localhost:4000/eureka/
