add SubscriptionService, still bugged, idk y

--- a/SubscriptionService/src/main/resources/application.properties
+++ b/SubscriptionService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/GlobalEventStore
+spring.datasource.url=jdbc:postgresql://localhost:5432/Subscriptions
 # Tim
 spring.datasource.username=postgres
 spring.datasource.password=horse
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 logging.level.org.springframework.web=DEBUG
 
-server.port=4800
+server.port=4900
 
 eureka.client.serviceUrl.defaultZone=http://localhost:4000/eureka/
