--- a/EventService/src/main/resources/application.properties
+++ b/EventService/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/GlobalEventStore
+spring.datasource.url=jdbc:postgresql://localhost:5432/EventStore
 # Tim
-spring.datasource.username=postgres
-spring.datasource.password=horse
+#spring.datasource.username=postgres
+#spring.datasource.password=horse
 # Ben
-# spring.datasource.username=
-# spring.datasource.password=hallo
+spring.datasource.username=
+spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 logging.level.org.springframework.web=DEBUG
 
-server.port=4800
+server.port=7200
 
 eureka.client.serviceUrl.defaultZone=http://localhost:4000/eureka/
