--- a/billingService/src/main/resources/application.properties
+++ b/billingService/src/main/resources/application.properties
@@ -1,18 +1,12 @@
-spring.bankcard-datasource.url=jdbc:postgresql://localhost:5432/AccountsDB
-spring.events-datasource.url=jdbc:postgresql://localhost:5432/EventStore_NFCReader
+spring.datasource.url=jdbc:postgresql://localhost:5432/PassengerBillsDB
 
 # TIM
-spring.bankcard-datasource.username=postgres
-spring.bankcard-datasource.password=horse
-spring.events-datasource.username=postgres
-spring.events-datasource.password=horse
+#spring.bankcard-datasource.username=postgres
+#spring.bankcard-datasource.password=horse
 
 #BEN
-# spring.bankcard-datasource.username=
-# spring.bankcard-datasource.password=hallo
-# spring.events-datasource.username=
-# spring.events-datasource.password=hallo
-
+spring.datasource.username=
+spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -20,3 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 logging.level.org.springframework.web=DEBUG
+
+server.port=7300
+
+eureka.client.serviceUrl.defaultZone=http://localhost:4000/eureka/
