--- a/AccountService/src/main/resources/application.properties
+++ b/AccountService/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB_Service
-# TIM
-spring.datasource.username=postgres
-spring.datasource.password=horse
+## TIM
+#spring.datasource.username=postgres
+#spring.datasource.password=horse
 # BEN
-# spring.datasource.username=
-# spring.datasource.password=hallo
+spring.datasource.username=
+spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
