renaming billing->invoicing

--- a/StationBroker/src/main/resources/application.properties
+++ b/StationBroker/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-# ALSO NEEDS TO HAVE EVENTSTORE! DUNNO YET HOW TO HAVE MULTIPLE DBs
 spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB_Broker
-spring.datasource.username=
-spring.datasource.password=hallo
+# TIM
+spring.datasource.username=postgres
+spring.datasource.password=horse
+# # BEN
+# spring.datasource.username=
+# spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
