--- a/SubscriptionService/src/main/resources/application.properties
+++ b/SubscriptionService/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Subscriptions
 # Tim
-#spring.datasource.username=postgres
-#spring.datasource.password=horse
+spring.datasource.username=postgres
+spring.datasource.password=horse
 # Ben
-spring.datasource.username=
-spring.datasource.password=hallo
+# spring.datasource.username=
+# spring.datasource.password=hallo
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
