--- a/NFCReader/src/main/resources/application.properties
+++ b/NFCReader/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/AccountDB
 # TIM
-#spring.datasource.username=postgres
-#spring.datasource.password=horse
+spring.datasource.username=postgres
+spring.datasource.password=horse
 # # BEN
-spring.datasource.username=
-spring.datasource.password=hallo
+# spring.datasource.username=
+# spring.datasource.password=hallo
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
